src/infra/docker-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker
  namespace: devops-tools
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker
  template:
    metadata:
      labels:
        app: docker
    spec:
      serviceAccountName: jenkins-admin
      containers:
        - name: docker
          image: docker:latest
          ports:
            - containerPort: 2375
            - containerPort: 2376
          securityContext:
            privileged: true
          volumeMounts:
            - name: docker-graph-storage
              mountPath: /var/lib/docker
      volumes:
        - name: docker-graph-storage
          emptyDir: {}
