src/infra/elastic-stateful.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elastic
spec:
  serviceName: elastic
  replicas: 1
  selector:
    matchLabels:
      app: elastic
  template:
    metadata:
      labels:
        app: elastic
    spec:
      containers:
        - name: elastic-search
          image: elasticsearch:8.7.1
          imagePullPolicy: Always
          ports:
            - containerPort: 9200
      volumes:
        - name: elastic-data
          hostPath:
            path: /usr/share/elasticsearch/data
  volumeClaimTemplates:
    - metadata:
        name: elastic-data
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: 1Gi
