src/infra/grafana-stateful.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: grafana
spec:
  serviceName: grafana
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:8.2.6
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
      volumes:
        - name: grafana-data
          hostPath:
            path: /var/lib/grafana
  volumeClaimTemplates:
    - metadata:
        name: grafana-data
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: 1Gi
