src/infra/kafka-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: qaprotours-kafka
          image: confluentinc/cp-kafka:6.2.0
          imagePullPolicy: Always
          ports:
            - containerPort: 9092
