src/infra/logstash-stateful.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: logstash
spec:
  serviceName: logstash
  replicas: 1
  selector:
    matchLabels:
      app: logstash
  template:
    metadata:
      labels:
        app: logstash
    spec:
      containers:
        - name: logstash
          image: logstash:8.7.1
          imagePullPolicy: Always
          ports:
            - containerPort: 5044
            - containerPort: 9600
          volumeMounts:
            - name: config
              mountPath: /usr/share/logstash/config/
      volumes:
        - name: logs-data
          hostPath:
            path: /home/logs
        - name: logstash-data
          hostPath:
            path: /usr/share/logstash/pipeline/
        - name: config
          configMap:
            name: logstash-configmap
            items:
              - key: logstash.conf
                path: logstash.conf
