src/infra/minio-stateful.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minio
spec:
  serviceName: minio
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: qaprotours-minio
          image: minio/minio:latest
          imagePullPolicy: Always
          command:
            - /bin/bash
            - -c
          args:
            - minio server /data --console-address :9090
          ports:
            - containerPort: 9000
            - containerPort: 9090
      volumes:
        - name: minio-data
          hostPath:
            path: /minio
  volumeClaimTemplates:
    - metadata:
        name: minio-data
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: 1Gi
