src/infra/pg-stateful.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: qaprotours-db
          image: postgres:15.1-alpine
          imagePullPolicy: Always
          ports:
            - containerPort: 5432
      volumes:
        - name: db-data
          hostPath:
            path: /data
  volumeClaimTemplates:
    - metadata:
        name: db-data
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: 1Gi
