src/infra/prometheus-stateful.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: prometheus
spec:
  serviceName: prometheus
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus:v2.44.0
          imagePullPolicy: Always
          ports:
            - containerPort: 9090
          command:
            - '--config.file=/etc/prometheus/prometheus.yaml'
      volumes:
        - name: prometheus-data
          hostPath:
            path: /etc/prometheus/
  volumeClaimTemplates:
    - metadata:
        name: prometheus-data
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: 1Gi
