src/infra/qaprotours-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qaprotours
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qaprotours
  template:
    metadata:
      labels:
        app: qaprotours
    spec:
      serviceAccountName: qaprotours-serviceaccount
      containers:
        - name: qaprotours-app
          image: ilyalisov/qaprotours:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: my-service-account-token
              mountPath: /var/run/secrets/kubernetes.io/serviceaccount
              readOnly: true
      volumes:
        - name: my-service-account-token
          projected:
            sources:
              - serviceAccountToken:
                  path: token
                  expirationSeconds: 3600
