src/infra/qaprotours-stateful.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: qaprotours
spec:
  serviceName: qaprotours
  replicas: 1
  selector:
    matchLabels:
      app: qaprotours
  template:
    metadata:
      labels:
        app: qaprotours
    spec:
      serviceAccountName: qaprotours-serviceaccount
      containers:
        - name: qaprotours-app
          image: ilyalisov/qaprotours:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: my-service-account-token
              mountPath: /var/run/secrets/kubernetes.io/serviceaccount
              readOnly: true
      volumes:
        - name: my-service-account-token
          projected:
            sources:
              - serviceAccountToken:
                  path: token
                  expirationSeconds: 3600
        - name: logs-data
          hostPath:
            path: /logs
  volumeClaimTemplates:
    - metadata:
        name: logs-data
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: 1Gi
