src/infra/zookeeper-stateful.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zookeeper-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
        - name: qaprotours-zookeeper
          image: confluentinc/cp-zookeeper:6.2.0
          imagePullPolicy: Always
          ports:
            - containerPort: 2181
