src/infra/docker-service.yml
apiVersion: v1
kind: Service
metadata:
  name: docker
  namespace: devops-tools
spec:
  selector:
    app: docker
  ports:
    - name: first
      port: 2375
      targetPort: 2375
    - name: second
      port: 2376
      targetPort: 2376
  type: NodePort
