src/infra/elastic-service.yml
apiVersion: v1
kind: Service
metadata:
  name: elastic
spec:
  selector:
    app: elastic
  ports:
    - port: 9200
      targetPort: 9200
