src/infra/logstash-service.yml
apiVersion: v1
kind: Service
metadata:
  name: logstash
spec:
  selector:
    app: logstash
  ports:
    - name: server
      port: 5044
      targetPort: 5044
    - name: client
      port: 9600
      targetPort: 9600
