src/infra/minio-service.yml
apiVersion: v1
kind: Service
metadata:
  name: minio
spec:
  selector:
    app: minio
  ports:
    - name: client
      port: 9000
      targetPort: 9000
    - name: server
      port: 9090
      targetPort: 9090
