src/infra/qaprotours-service.yml
apiVersion: v1
kind: Service
metadata:
  name: qaprotours
spec:
  selector:
    app: qaprotours
  ports:
    - port: 80
      targetPort: 8080
  type: NodePort
