src/infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: istio
  name: istio-ingress
spec:
  rules:
    - http:
        paths:
          - path: /image
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: qaprotours
                port:
                  number: 8080
